# to-do-rumi

./: README.md  package-lock.json  package.json
plugins/tauri-plugin-sqlite/: Cargo.toml  build.rs  package.json
plugins/tauri-plugin-sqlite/android/: .gitignore  build.gradle.kts
plugins/tauri-plugin-sqlite/android/src/androidTest/java/: DatabaseHelperInstrumentedTest.kt
plugins/tauri-plugin-sqlite/android/src/main/java/: Command.kt  Con.kt  Dao.kt  DatabaseHelper.kt  DatabaseManager.kt  Db.kt  Model.kt  NoUse.kt  Scheme.kt  SqlitePlugin.kt  roomdb.kt
plugins/tauri-plugin-sqlite/android/src/test/java/: DatabaseHelperUnitTest.kt
plugins/tauri-plugin-sqlite/guest-js/: index.ts  types.ts
plugins/tauri-plugin-sqlite/ios/: Package.swift
plugins/tauri-plugin-sqlite/ios/Sources/ios/: Command.swift  Con.swift  Dao.swift  Db.swift  File.swift  Model.swift  NoUse.swift  Scheme.swift  SqlitePlugin.swift
plugins/tauri-plugin-sqlite/ios/Tests/iosTests/: iosTests.swift
plugins/tauri-plugin-sqlite/permissions/: default.toml
plugins/tauri-plugin-sqlite/permissions/autogenerated/: reference.md
plugins/tauri-plugin-sqlite/permissions/autogenerated/commands/: get_all_todo.toml  get_db_user_version.toml  insert_todo.toml
plugins/tauri-plugin-sqlite/permissions/schemas/: schema.json
plugins/tauri-plugin-sqlite/src/: args.rs  commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src/: App.tsx  Home.tsx  Layout.tsx  Test.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  (+1 more)
(+8 files in other folders)
