[package]
name = "tauri-plugin-sqlite"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-sqlite"

[dependencies]
tauri = { version = "2.0.0-rc.0" }
serde = "1.0"
thiserror = "1.0"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.0", features = ["build"] }
